--- a/PruebaTecnicaGrupoCarso/View/GetAllCollectionViewCell.xib
+++ b/PruebaTecnicaGrupoCarso/View/GetAllCollectionViewCell.xib
@@ -20,35 +20,42 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6bZ-Eu-3ba">
                         <rect key="frame" x="0.0" y="0.0" width="170" height="150"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smw-0F-Po3">
-                                <rect key="frame" x="6" y="0.0" width="164" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccG-Ds-1ee">
+                                <rect key="frame" x="78.666666666666686" y="5" width="86.333333333333314" height="36"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
+                                <color key="textColor" systemColor="systemGray3Color"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0000" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccG-Ds-1ee">
-                                <rect key="frame" x="87" y="125" width="48" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3au-xd-Vod">
+                                <rect key="frame" x="40" y="5" width="37.666666666666657" height="36"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
+                                <color key="textColor" systemColor="systemGray3Color"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="N°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3au-xd-Vod">
-                                <rect key="frame" x="68" y="125" width="17" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ta0-wO-pd8">
-                                <rect key="frame" x="36" y="26" width="99" height="99"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ta0-wO-pd8">
+                                <rect key="frame" x="5" y="5" width="160" height="116"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smw-0F-Po3">
+                                <rect key="frame" x="5" y="126" width="160" height="24"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="170" id="03H-Ou-M3H"/>
+                            <constraint firstItem="smw-0F-Po3" firstAttribute="top" secondItem="Ta0-wO-pd8" secondAttribute="bottom" constant="5" id="15d-Uc-CWj"/>
+                            <constraint firstItem="smw-0F-Po3" firstAttribute="leading" secondItem="6bZ-Eu-3ba" secondAttribute="leading" constant="5" id="2EQ-1y-0gX"/>
+                            <constraint firstAttribute="trailing" secondItem="ccG-Ds-1ee" secondAttribute="trailing" constant="5" id="2L0-HZ-D4W"/>
+                            <constraint firstItem="3au-xd-Vod" firstAttribute="top" secondItem="6bZ-Eu-3ba" secondAttribute="top" constant="5" id="C8U-tn-fSK"/>
+                            <constraint firstItem="Ta0-wO-pd8" firstAttribute="top" secondItem="6bZ-Eu-3ba" secondAttribute="top" constant="5" id="Fkx-7t-b35"/>
+                            <constraint firstItem="ccG-Ds-1ee" firstAttribute="leading" secondItem="3au-xd-Vod" secondAttribute="trailing" constant="1" id="Nqk-bf-N3S"/>
+                            <constraint firstAttribute="trailing" secondItem="smw-0F-Po3" secondAttribute="trailing" constant="5" id="Wg5-71-ETw"/>
+                            <constraint firstAttribute="bottom" secondItem="smw-0F-Po3" secondAttribute="bottom" id="ZJ4-RT-dhg"/>
+                            <constraint firstAttribute="trailing" secondItem="Ta0-wO-pd8" secondAttribute="trailing" constant="5" id="chZ-cu-PIL"/>
+                            <constraint firstItem="ccG-Ds-1ee" firstAttribute="top" secondItem="6bZ-Eu-3ba" secondAttribute="top" constant="5" id="dlL-mX-LdQ"/>
+                            <constraint firstItem="Ta0-wO-pd8" firstAttribute="leading" secondItem="6bZ-Eu-3ba" secondAttribute="leading" constant="5" id="e5l-lg-GA4"/>
                             <constraint firstAttribute="height" constant="150" id="wrt-lm-gtw"/>
                         </constraints>
                     </view>
@@ -71,8 +78,11 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
